<resources>
    <string name="app_name" translatable="false">Secure Smart Home</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="favourite_settings">Favourites</string>
    <string name="navigation_drawer_open">Navigation</string>
    <string name="navigation_drawer_close">Navigate</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_home">Home</string>
    <string name="nav_door_string">Door</string>
    <string name="nav_light_string">Light</string>
    <string name="nav_climate_string">Climate</string>
    <string name="nav_holiday_string">Holiday</string>
    <string name="nav_status_string">Status</string>
    <string name="nav_listGroups_string">List Groups</string>
    <string name="nav_addNewUserDevice_sting">Add User</string>
    <string name="nav_addModule_string">Add Module</string>
    <string name="deviceStatusConnectedSlaves">Connected Slaves</string>
    <string name="deviceStatusConnectedModules">Connected Modules</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="status_of_light">Status of the light</string>
    <string name="deviceSatusConnectedSlaves">Connected Slaves</string>
    <string name="NoSlavesConnected">No Slaves connected</string>
    <string name="NoModulesConnected">No modules connected</string>
    <string name="addUser">Add User</string>
    <string name="group">Group</string>
    <string name="qr_code_description">This is a QR-Code.</string>
    <string name="please_scan_device">Scan the QR-Code with your device.</string>
    <string name="welcome_to_ssh">Welcome to the Secure Smart Home App.</string>
    <string name="click_to_register">Click below to register.</string>
    <string name="register">Register</string>
    <string name="refreshImage">Refresh image</string>
    <string name="openDoor">Open door</string>
    <string name="doorStatusOpen">Status: open</string>
    <string name="blockDoor">Block door</string>
    <string name="unblockDoor">Unblock door</string>
    <string name="add_new_group_dialog_title">Add new group</string>
    <string name="apply">Apply</string>
    <string name="revoke">Revoke</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="edit_group_dialog_title">Edit group</string>
    <string name="set_permission_template">Set a permission template</string>
    <string name="error_fill_all_fields">Cannot add module. Missing information.</string>
    <string name="added_module_success">Added module successfully</string>
    <string name="added_module_fail">Adding new module failed</string>
    <string name="permission_dialog_title">Edit permission.</string>
    <string name="with_id_is_in_group">with ID %1$s is in group %2$s.</string>
    <string name="error_cannot_add_user">Cannot add new user. Missing information.</string>
    <string name="error_cannot_add_group">Cannot add new group. Missing information.</string>
    <string-array name="sensor_connection_types">
        
        <item>GPIO</item>
        <item>USB</item>
        <item>WLAN</item>
        <item>Mock</item>
    </string-array>
    <string name="switchSimulationOn">Switch simulation ON</string>
    <string name="switchSimulationOff">Switch simulation OFF</string>
    <string name="holidaySimulationStatus">Status: </string>
    <string name="holidaySimulationOn">On</string>
    <string name="holidaySimulationOff">Off</string>
    <string name="deleteuserdevice_dialog_title">Want to remove %s\?</string>
    <string name="denied">Denied</string>
    <string name="granted">Granted</string>
    <string name="nav_add_odroid_string">Add Slave</string>
    <string name="new_slave_name_missing">Enter a name for the new slave</string>
    <string name="add_group">Add Group</string>
    <string name="edit_group">Edit group</string>
    <string name="remove_group">Remove group</string>
    <string name="gpio_pin">GPIO Pin:</string>
    <string name="add_gpio_module">Add GPIO module</string>
    <string name="usb_port">USB Port:</string>
    <string name="add_usb_module">Add USB module</string>
    <string name="add_wlan_username">Username:</string>
    <string name="add_wlan_password">Password:</string>
    <string name="ip_address">IP Address:</string>
    <string name="port">Port:</string>
    <string name="add_wlan_module">Add WLAN module</string>
    <string name="add_mock_module">Add mocked module</string>
    <string name="status_name">Name:</string>
    <string name="status_id" translatable="false">ID:</string>
    <string name="statusmodule_name">Name:</string>
    <string name="statusmodule_type">Module type:</string>
    <string name="connector_type">Connector type:</string>
    <string name="name_of_new_slave">Name of the new Slave:</string>
    <string name="add_new_slave">Add New Slave</string>
    <string name="name_of_new_sensor">Name of the new Sensor:</string>
    <string name="connected_to_type">Connected to Slave:</string>
    <string name="warn_no_slave_connected">No Slaves connected</string>
    <string name="addmodule_sensor_type">Sensor type:</string>
    <string name="querying_groups">Querying groups</string>
    <string name="cannot_add_slave">Could not add the new Slave.</string>
    <string name="warn_client_rejected">Connection refused. Maybe the system has been reset or your user account has been deleted.</string>
    <string name="warn_no_connection_to_master">No Connection to Secure Smart Home Server.</string>
    <string name="malformed_qr_code">Malformed QR-Code</string>
    <string name="climate_sensor">Climate Sensor:</string>
    <string name="temperature_1">Temperature 1:</string>
    <string name="temperature2">Temperature 2:</string>
    <string name="pressure">Pressure:</string>
    <string name="altitude">Altitude:</string>
    <string name="humidity">Humidity:</string>
    <string name="uv">UV Index:</string>
    <string name="visible_1">Visible:</string>
    <string name="ir">IR:</string>
    <string name="perm_add_odroid">Adding Odroids</string>
    <string name="perm_add_module">Adding Modules</string>
    <string name="perm_delete_module">Delete Modules</string>
    <string name="perm_rename_odroid">Edit Odroid names</string>
    <string name="perm_delete_odroid">Delete Odroids</string>
    <string name="perm_add_sensor">Adding modules</string>
    <string name="perm_rename_module">Edit module names</string>
    <string name="perm_delete_sensor">Delete modules</string>
    <string name="perm_request_light_status">Request light status</string>
    <string name="perm_request_window_status">Request window status</string>
    <string name="perm_request_door_status">Request door status</string>
    <string name="perm_lock_door">Lock the door</string>
    <string name="perm_unlatch_door">Unlatch door</string>
    <string name="perm_unlatch_door_on_holiday">Unlatch door while holiday simulation</string>
    <string name="perm_request_camera_status">Request camera status</string>
    <string name="perm_take_camera_picture">Trigger taking a camera picture</string>
    <string name="perm_request_weather_status">Request weather status</string>
    <string name="perm_toggle_holiday_simulation">Toggle holiday simulation</string>
    <string name="perm_add_user">Adding users</string>
    <string name="perm_delete_user">Delete users</string>
    <string name="perm_change_user_name">Edit user names</string>
    <string name="perm_change_user_group">Edit user groups</string>
    <string name="perm_modify_user_permission">Edit user permissions</string>
    <string name="perm_add_group">Adding groups</string>
    <string name="perm_delete_group">Delete groups</string>
    <string name="perm_change_group_name">Edit group names</string>
    <string name="perm_show_group_member">Display group members</string>
    <string name="perm_humidity_warning">Receive room climate warnings</string>
    <string name="perm_brightness_warning">Receive brightness warnings</string>
    <string name="perm_holiday_mode_switched_on">Enabling the holiday simulation</string>
    <string name="perm_holiday_mode_switched_off">Disable the holiday simulation</string>
    <string name="perm_system_health_warning">Receive system health notifications</string>
    <string name="perm_bell_rang">Receive doorbell notifications</string>
    <string name="perm_weather_warning">Receive weather warnings</string>
    <string name="perm_door_unlatched">Request door unlatched status</string>
    <string name="perm_door_locked">Request door locked status</string>
    <string name="perm_door_unlocked">Request door unlocked status</string>
    <string name="perm_switch_light">Switch lights</string>
    <string name="perm_switch_light_extern">Switch lights from extern</string>
    <string name="perm_desc_add_odroid">Allows adding new Odroids.</string>
    <string name="perm_desc_rename_odroid">Allows renaming a Odroid\' name.</string>
    <string name="perm_desc_delete_odroid">Allows deleting Odroids.</string>
    <string name="perm_desc_add_sensor">Allows adding new modules.</string>
    <string name="perm_desc_rename_module">Allows renaming a module\'s name.</string>
    <string name="perm_desc_delete_sensor">Allows deleting modules.</string>
    <string name="perm_desc_request_light_status">Allows requesting the light status.</string>
    <string name="perm_desc_request_window_status">Allows requesting the window status.</string>
    <string name="perm_desc_request_door_status">Allows requesting the door status.</string>
    <string name="perm_desc_lock_door">Allows locking the door.</string>
    <string name="perm_desc_unlatch_door">Allows unlatching the door.</string>
    <string name="perm_desc_unlatch_door_on_holiday">Allows unlatching the door while the holiday simulation is active.</string>
    <string name="perm_desc_request_camera_status">Allows requesting the camera status.</string>
    <string name="perm_desc_take_camera_picture">Allows receiving pictures from the camera.</string>
    <string name="perm_desc_request_weather_status">Allows requesting the climate status.</string>
    <string name="perm_desc_toggle_holiday_simulation">Allows toggling the holiday simulation.</string>
    <string name="perm_desc_add_user">Allows adding new users.</string>
    <string name="perm_desc_delete_user">Allows deleting users.</string>
    <string name="perm_desc_change_user_name">Allows editing a user\'s name.</string>
    <string name="perm_desc_change_user_group">Allows editing a user\'s group.</string>
    <string name="perm_desc_modify_user_permission">Allows modifying a user\'s permission.</string>
    <string name="perm_desc_add_group">Allows adding new groups.</string>
    <string name="perm_desc_delete_group">Allows deleting groups.</string>
    <string name="perm_desc_change_group_name">Allows editing group names.</string>
    <string name="perm_desc_show_group_member">Allows requesting a group\'s members.</string>
    <string name="perm_desc_humidity_warning">Allows receiving climate warnings.</string>
    <string name="perm_desc_brightness_warning">Allows receiving brightness warnings.</string>
    <string name="perm_desc_system_health_warning">Allows requesting System Health warnings.</string>
    <string name="image_showing_an_island" translatable="false">A image showing an island</string>
    <string name="open_door" translatable="false">Open the Door Fragment</string>
    <string name="open_light" translatable="false">Open Light Fragment</string>
    <string name="open_climate" translatable="false">Open Climate Fragment</string>
    <string name="open_holiday" translatable="false">Open Holiday Fragment</string>
    <string name="open_status" translatable="false">Open Status Fragment</string>
    <string name="open_group" translatable="false">Open Group Fragment</string>
</resources>