<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016.
  ~ Bucher Andreas, Fink Simon Dominik, Fraedrich Christoph, Popp Wolfgang,
  ~ Sell Leon, Werli Philemon
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<!--@author Andreas Bucher-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_light"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_door"
            android:icon="@drawable/ic_door_light"
            android:title="@string/nav_door_string"/>
        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/ic_light_light"
            android:title="@string/nav_light_string"/>
        <item
            android:id="@+id/nav_climate"
            android:icon="@drawable/ic_weather_light"
            android:title="@string/nav_climate_string"/>
        <item
            android:id="@+id/nav_holiday"
            android:icon="@drawable/ic_holiday_light"
            android:title="@string/nav_holiday_string"/>
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_status_light"
            android:title="@string/nav_status_string"/>
    </group>

    <item android:title="@string/nav_edit">
        <menu>
            <item
                android:id="@+id/nav_list_groups"
                android:icon="@drawable/ic_modifypermissions_light"
                android:title="@string/nav_listGroups_string"/>
            <item
                android:id="@+id/nav_addNewUserDevice"
                android:icon="@drawable/ic_addnewuser_light"
                android:title="@string/nav_addNewUserDevice_sting"/>
            <item
                android:id="@+id/nav_addModule"
                android:icon="@drawable/ic_addmodul_light"
                android:title="@string/nav_addModule_string"/>
            <item
                android:id="@+id/nav_add_odroid"
                android:icon="@drawable/ic_addmodul_light"
                android:title="@string/nav_add_odroid_string"/>
        </menu>
    </item>
</menu>