<?xml version="1.0" encoding="utf-8"?>
<!--@author Phil Werli-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/welcome_to_ssh"
        android:textSize="@dimen/typography_headline2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/click_to_register"
        android:textSize="@dimen/typography_headline1"
        />

    <Button
        android:id="@+id/welcomescreen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/register"/>

</LinearLayout>