<?xml version="1.0" encoding="utf-8"?>
<!--@author Andreas Bucher-->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:columnCount="2"
    android:measureWithLargestChild="false"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:rowCount="3">

    <View
        android:id="@+id/climatesensor_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/md_black_1000"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/climateSensor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/climate_sensor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/typography_headline2"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/temperature_1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/temp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/temperature2"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/temp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/pressure"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/altitude"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/humidity"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/uv"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/uv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/visible_1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/ir"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="New Text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/typography_subheadline"/>
    </TableRow>

</TableLayout>