<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016.
  ~ Bucher Andreas, Fink Simon Dominik, Fraedrich Christoph, Popp Wolfgang,
  ~ Sell Leon, Werli Philemon
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<!--@author Phil Werli-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/doorButtonOpen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_door"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_door_open"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/lightButtonOn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_light"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_light_bulb_on"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/climateButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_climate"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_thermometer"/>

        <ImageButton
            android:id="@+id/holidayButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_holiday"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_holiday_island"
            android:transitionName="holidayIconTransition"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/statusButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_status"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_status_tool"/>

        <ImageButton
            android:id="@+id/usersButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/open_group"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_user_big"/>
    </LinearLayout>
</LinearLayout>